[tool.poetry]
name = "economic-sentiment-monitor"
version = "0.1.0"
description = "A real-time economic sentiment monitoring system"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
redis = "^5.0.1"
confluent-kafka = "^2.3.0"  # or redis-py if using Redis Streams
elasticsearch = "^8.11.1"
influxdb-client = "^1.40.0"
timescale-vector = {optional = true, version = "^0.1.0"}  # if using Timescale
sentence-transformers = "^2.2.2"
torch = "^2.1.2"
spacy = "^3.7.2"
nltk = "^3.8.1"
yfinance = "^0.2.33"
alpha-vantage = "^2.3.1"
feedparser = "^6.0.10"  # for RSS
requests = "^2.31.0"
aiohttp = "^3.9.1"
prometheus-client = "^0.19.0"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
websockets = "^12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.2"

[tool.poetry.extras]
timescale = ["timescale-vector"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
files = ["app"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
