[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "market-terminal"
version = "0.8.0"
description = "Economic Sentiment Monitor — Bloomberg-style terminal TUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "textual>=0.52.0",
    "feedparser>=6.0",
    "requests>=2.31",
    "yfinance>=0.2.36",
    "vaderSentiment>=3.3.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.38",
    "torch>=2.2",
    "spacy>=3.7",
]
fulltext = ["newspaper3k>=0.2.8"]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]
analytics = [
    "pandas>=2.2",
    "plotly>=5.20",
    "duckdb>=0.10",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
]

[project.scripts]
market-terminal = "market_terminal.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
